--- a/Pipfile
+++ b/Pipfile
@@ -10,7 +10,7 @@ pyinstaller = "*"
 requests = "==2.24.0"
 click = "*"
 selenium = "*"
-chromedriver-py = "~=90.0"
+chromedriver-py = "~89.0"
 furl = "*"
 twilio = "*"
 discord-webhook = "*"
